+add navbar, header, hero, body div

--- a/components/header.html
+++ b/components/header.html
@@ -5,7 +5,7 @@
             <li><a href="buy.html"></a>Buy</li>
             <li><a href="rent.html"></a>Rent</li>
             <li><a href="sell.html"></a>Sell</li>
-            <li><a href="getamortgage.html"></a>Get a Mortgage</li>
+            <li><a href="getamortgage.html"></a>Get a mortgage</li>
             <li><a href="findanagent.html"></a>Find an Agent</li>
         </ul>
 
@@ -19,7 +19,7 @@
             <li><a href="managerentals.html"></a>Manage Rentals</li>
             <li><a href="advertise.html"></a>Advertise</li>
             <li><a href="help.html"></a>Help</li>
-            <li><a href="signin.html"></a>Sign in</li>
+            <li><a href="signin.html"></a>Sign In</li>
         </ul>
     </nav>
 </header>
