refined header & add footer (not completed)

--- a/components/header.html
+++ b/components/header.html
@@ -1,12 +1,44 @@
 <header class="site-header">
-
     <nav class="navbar">
         <ul class="nav-left">
-            <li><a href="buy.html"></a>Buy</li>
-            <li><a href="rent.html"></a>Rent</li>
-            <li><a href="sell.html"></a>Sell</li>
-            <li><a href="getamortgage.html"></a>Get a mortgage</li>
-            <li><a href="findanagent.html"></a>Find an Agent</li>
+            <li class="dropdown">
+                <a href="#">Buy</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Homes for sale</a></li>
+                    <li><a href="#">Open houses</a></li>
+                    <li><a href="#">New construction</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#">Rent</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">All rentals</a></li>
+                    <li><a href="#">Apartments</a></li>
+                    <li><a href="#">Houses</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#">Sell</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Post listing</a></li>
+                    <li><a href="#">Pricing tool</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+
+                <a href="#">Get a mortgage</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Lorem Ipsum</a></li>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#">Find an Agent</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Lorem Ipsum</a></li>
+                    <li><a href="#">Lorem Ipsum</a></li>
+                </ul>
+            </li>
         </ul>
 
         <div class="logo">
@@ -16,10 +48,33 @@
         </div>
 
         <ul class="nav-right">
-            <li><a href="managerentals.html"></a>Manage Rentals</li>
-            <li><a href="advertise.html"></a>Advertise</li>
-            <li><a href="help.html"></a>Help</li>
-            <li><a href="signin.html"></a>Sign In</li>
+            <li class="dropdown">
+                <a href="#">Manage Rentals</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Payments</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#">Advertise</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Plans</a></li>
+                    <li><a href="#">Pricing</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#">Help</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">FAQs</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#">Sign In</a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">User login</a></li>
+                    <li><a href="#">Register</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
 </header>
